infrastructure/resources/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fe-web
  namespace: default
  labels:
    version: v1
    date: 20170311T222958Z
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fe-web
    spec:
      containers:
        - name: fe-web
          image: 'us.gcr.io/merchant-dash/merchant-dashboard:2.29.6'
          volumeMounts:
            - mountPath: /cache
              name: temp-volume
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 10
      volumes:
        - name: temp-volume
          emptyDir: {}
