infrastructure/resources/web-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
      app: fe-web
    name: fe-web
    namespace: default
spec:
    type: NodePort
    ports:
      - port: 80
        targetPort: 8080
        protocol: TCP
    selector:
      app: fe-web
