infrastructure/resources/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fe-web
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - mdjs.io
    - www.mdjs.io
    secretName: default-tls
  rules:
  - host: mdjs.io
    http:
      paths:
      - path: /
        backend:
          serviceName: fe-web
          servicePort: 80
      - path: /*
        backend:
          serviceName: fe-web
          servicePort: 80
  - host: www.mdjs.io
    http:
      paths:
      - path: /
        backend:
          serviceName: fe-web
          servicePort: 80
      - path: /*
        backend:
          serviceName: fe-web
          servicePort: 80
